# without-fingers

./: .cursor.rules  .gitignore  Dockerfile  Makefile  index.html  main.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: architecture.md
src/main/: main.ts
src/renderer/: index.html  renderer.ts  styles.css
src/systems/voice/: VoiceCommandSystem.ts
tests/features/: electron_python_integration.feature
tests/step_defs/: test_electron_python_integration.py
without_fingers/: docker_hello.py  hello.py
