[tool.poetry]
name = "without-fingers"
version = "0.1.0"
description = ""
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
npm = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
