[tool.poetry]
name = "without-fingers"
version = "0.1.0"
description = "Skip RSI and use other input methods"
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.0.0"
pytest-bdd = "^6.0.0"
pytest-asyncio = "^0.21.0"
selenium = "^4.0.0"
pytest-xvfb = "^2.0.0"
docker = "^7.1.0"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
mypy = "^1.0.0"
ruff = "^0.1.0" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
